--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powerfulyang/components",
-  "version": "0.7.27",
+  "version": "0.7.28",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
@@ -26,15 +26,15 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.2.17",
-    "@powerfulyang/utils": "^0.7.15",
+    "@powerfulyang/hooks": "^0.2.18",
+    "@powerfulyang/utils": "^0.7.16",
     "classnames": "^2.3.1",
     "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@powerfulyang/lint": "^0.2.16",
-    "@powerfulyang/node-utils": "^0.2.13",
+    "@powerfulyang/lint": "^0.2.17",
+    "@powerfulyang/node-utils": "^0.2.14",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-url": "^6.1.0",
@@ -60,5 +60,6 @@
     "sass": "^1.37.5",
     "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5"
-  }
+  },
+  "gitHead": "972987c947501d8cc10ac38b6875e565c81f6880"
 }
