--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "build:dev": "rimraf dist && cross-env NODE_ENV=development rollup -c",
     "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "tsc": "tsc --noEmit",
+    "prepare": "husky install",
+    "build-storybook": "build-storybook",
+    "test": "jest",
+    "precommit": "npm run lint:js && npm run lint:style && npm run prettier && npm run tsc && npm run test"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
     "@powerfulyang/hooks": "^0.3.0",
-    "@powerfulyang/utils": "^1.2.0",
+    "@powerfulyang/utils": "^1.3.0",
     "classnames": "^2.3.1",
     "rxjs": "^7.4.0"
   },
@@ -36,20 +40,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@powerfulyang/lint": "^0.7.2",
+    "@powerfulyang/lint": "^0.7.3",
     "@powerfulyang/node-utils": "^1.0.4",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^6.4.3",
-    "@storybook/addon-essentials": "^6.4.3",
-    "@storybook/addon-links": "^6.4.3",
-    "@storybook/react": "^6.4.3",
-    "@svgr/rollup": "^6.0.0",
+    "@storybook/addon-actions": "^6.4.4",
+    "@storybook/addon-essentials": "^6.4.4",
+    "@storybook/addon-links": "^6.4.4",
+    "@storybook/react": "^6.4.4",
+    "@svgr/rollup": "^6.1.0",
     "@types/lodash-es": "^4.17.5",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "husky": "^7.0.4",
     "lodash-es": "^4.17.21",
     "rollup": "^2.60.2",
     "rollup-plugin-babel": "^4.4.0",
