--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powerfulyang/components",
-  "version": "0.7.28",
+  "version": "0.7.30",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
@@ -12,7 +12,8 @@
   "style": "dist/es/index.css",
   "sideEffects": false,
   "scripts": {
-    "prettier": "prettier --write \"src/**/*.{js,jsx,tsx,ts,json,md}\"",
+    "patch-version": "npm version patch --no-git-tag-version",
+    "prettier": "prettier --write \"src/**/*.{js,jsx,tsx,ts,json,md,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
@@ -23,14 +24,15 @@
     "prepare": "husky install",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "precommit": "npm run lint:js && npm run lint:style && npm run prettier && npm run tsc && npm run test"
+    "precommit": "npm run lint:js && npm run lint:style && npm run prettier && npm run tsc && npm run test",
+    "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.3.0",
-    "@powerfulyang/utils": "^1.3.0",
+    "@powerfulyang/hooks": "^0.3.2",
+    "@powerfulyang/utils": "^1.3.2",
     "classnames": "^2.3.1",
     "rxjs": "^7.4.0"
   },
@@ -40,22 +42,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@powerfulyang/lint": "^0.7.3",
+    "@powerfulyang/lint": "^0.7.9",
     "@powerfulyang/node-utils": "^1.0.4",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^6.4.4",
-    "@storybook/addon-essentials": "^6.4.4",
-    "@storybook/addon-links": "^6.4.4",
-    "@storybook/react": "^6.4.4",
-    "@svgr/rollup": "^6.1.0",
+    "@storybook/addon-actions": "^6.4.7",
+    "@storybook/addon-essentials": "^6.4.7",
+    "@storybook/addon-links": "^6.4.7",
+    "@storybook/react": "^6.4.7",
+    "@svgr/rollup": "^6.1.1",
+    "@testing-library/react": "^12.1.2",
     "@types/lodash-es": "^4.17.5",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
-    "husky": "^7.0.4",
-    "lodash-es": "^4.17.21",
     "rollup": "^2.60.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-postcss": "^4.0.2",
