--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@powerfulyang/components",
-  "version": "0.7.30",
+  "version": "1.0.0",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
   "repository": "https://github.com/powerfulyang/tools.git",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "style": "dist/es/index.css",
   "sideEffects": false,
@@ -17,7 +19,6 @@
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
-    "build:dev": "rimraf dist && cross-env NODE_ENV=development rollup -c",
     "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
     "storybook": "start-storybook -p 6006",
     "tsc": "tsc --noEmit",
@@ -33,35 +34,26 @@
   "dependencies": {
     "@powerfulyang/hooks": "^0.3.2",
     "@powerfulyang/utils": "^1.3.2",
-    "classnames": "^2.3.1",
-    "rxjs": "^7.4.0"
+    "classnames": "^2.3.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
     "@powerfulyang/lint": "^0.7.9",
     "@powerfulyang/node-utils": "^1.0.4",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-actions": "^6.4.7",
     "@storybook/addon-essentials": "^6.4.7",
     "@storybook/addon-links": "^6.4.7",
     "@storybook/react": "^6.4.7",
-    "@svgr/rollup": "^6.1.1",
     "@testing-library/react": "^12.1.2",
-    "@types/lodash-es": "^4.17.5",
     "@types/react-dom": "^17.0.11",
-    "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "rollup": "^2.60.2",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.1",
     "tailwindcss": "^2.2.19"
   }
 }
