chore: 其实没大动

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     }
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
-  "exclude": ["dist"]
+  "exclude": ["dist", "./src/stories/*.tsx"]
 }
