--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powerfulyang/components",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
@@ -20,20 +20,20 @@
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
     "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
-    "storybook": "start-storybook -p 6006",
     "tsc": "tsc --noEmit",
     "prepare": "husky install",
-    "build-storybook": "build-storybook",
     "test": "jest",
     "precommit": "npm run lint:js && npm run lint:style && npm run prettier && npm run tsc && npm run test",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.3.2",
-    "@powerfulyang/utils": "^1.3.2",
+    "@powerfulyang/hooks": "^0.3.5",
+    "@powerfulyang/utils": "^1.3.4",
     "classnames": "^2.3.1"
   },
   "peerDependencies": {
@@ -41,19 +41,21 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@powerfulyang/lint": "^0.7.9",
     "@powerfulyang/node-utils": "^1.0.4",
     "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^6.4.7",
-    "@storybook/addon-essentials": "^6.4.7",
-    "@storybook/addon-links": "^6.4.7",
-    "@storybook/react": "^6.4.7",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "@testing-library/react": "^12.1.2",
     "@types/react-dom": "^17.0.11",
+    "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
-    "rollup": "^2.60.2",
-    "rollup-plugin-postcss": "^4.0.2",
-    "tailwindcss": "^2.2.19"
+    "postcss": "^8.4.4",
+    "rollup": "^2.61.0",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
