--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "dependencies": {
     "@powerfulyang/hooks": "^0.3.5",
-    "@powerfulyang/utils": "^1.3.4",
+    "@powerfulyang/utils": "^1.3.6",
     "classnames": "^2.3.1"
   },
   "peerDependencies": {
@@ -42,13 +42,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@powerfulyang/lint": "^0.7.9",
-    "@powerfulyang/node-utils": "^1.0.4",
+    "@powerfulyang/lint": "^0.7.10",
     "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@testing-library/react": "^12.1.2",
     "@types/react-dom": "^17.0.11",
@@ -56,6 +57,9 @@
     "cross-env": "^7.0.3",
     "postcss": "^8.4.4",
     "rollup": "^2.61.0",
-    "rollup-plugin-postcss": "^4.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass-loader": "^12.4.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "webpack": "^5.65.0"
   }
 }
