--- a/package.json
+++ b/package.json
@@ -35,36 +35,38 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.3.5",
-    "@powerfulyang/utils": "^1.3.6",
+    "@powerfulyang/hooks": "^0.3.6",
+    "@powerfulyang/utils": "^1.3.10",
     "classnames": "^2.3.1",
-    "framer-motion": "^5.4.5",
-    "next": "^12.0.7",
-    "rxjs": "^7.4.0"
+    "framer-motion": "^6.2.6",
+    "next": "^12.0.10",
+    "rxjs": "^7.5.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.17.4",
     "@powerfulyang/lint": "^0.7.10",
     "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/builder-webpack5": "^6.4.9",
-    "@storybook/manager-webpack5": "^6.4.9",
-    "@storybook/react": "^6.4.9",
-    "@testing-library/react": "^12.1.2",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@testing-library/react": "^12.1.3",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
-    "rollup": "^2.61.0",
+    "rollup": "^2.67.2",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass-loader": "^12.4.0",
+    "sass-loader": "^12.6.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "webpack": "^5.65.0"
+    "webpack": "^5.69.0"
   }
 }
