--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powerfulyang/components",
-  "version": "1.0.6",
+  "version": "1.1.6",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
@@ -10,50 +10,60 @@
     "src"
   ],
   "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
+  "module": "dist/es/index.mjs",
   "style": "dist/es/index.css",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/es/index.mjs",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./dist/es/index.css": {
+      "style": "./dist/es/index.css"
+    }
+  },
   "sideEffects": [
-    "**/*.scss",
-    "src/index.tsx"
+    "**/*.scss"
   ],
   "scripts": {
     "patch-version": "npm version patch --no-git-tag-version",
     "prettier": "prettier --write \"src/**/*.{js,jsx,tsx,ts,json,md,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
-    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
+    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c && npm run tsc",
     "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
-    "tsc": "tsc --noEmit",
+    "tsc": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
     "prepare": "husky install",
     "test": "jest",
-    "precommit": "npm run lint:js && npm run lint:style && npm run prettier && npm run tsc && npm run test",
+    "precommit": "lint-staged && npm run test",
     "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.3.6",
+    "@powerfulyang/hooks": "^0.3.8",
     "@powerfulyang/utils": "^1.3.10",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
-    "next": "^12.1.0",
-    "rxjs": "^7.5.4"
+    "rxjs": "^7.5.5"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@powerfulyang/lint": "^0.7.10",
+    "@powerfulyang/lint": "^0.7.13",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@rollup/plugin-url": "^6.1.0",
     "@testing-library/react": "^12.1.3",
     "cross-env": "^7.0.3",
-    "rollup": "^2.68.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "tsconfig-paths-webpack-plugin": "^3.5.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.70.0",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
