--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powerfulyang/components",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
@@ -41,27 +41,23 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.3.8",
-    "@powerfulyang/utils": "^1.3.10",
+    "@powerfulyang/hooks": "^0.3.9",
+    "@powerfulyang/utils": "^1.3.12",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "rxjs": "^7.5.5"
   },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
   "devDependencies": {
-    "@powerfulyang/lint": "^0.7.13",
-    "@rollup/plugin-commonjs": "^21.0.2",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.1",
-    "@rollup/plugin-url": "^6.1.0",
-    "@testing-library/react": "^12.1.3",
-    "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.70.0",
-    "rollup-plugin-postcss": "^4.0.2"
+    "@powerfulyang/lint": "0.7.14",
+    "@rollup/plugin-commonjs": "21.0.3",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "@rollup/plugin-typescript": "8.3.1",
+    "@rollup/plugin-url": "6.1.0",
+    "@testing-library/react": "13.0.0",
+    "cross-env": "7.0.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "rollup": "2.70.1",
+    "rollup-plugin-postcss": "4.0.2"
   }
 }
