feat: improving compatibility with React 18

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
-  "exclude": ["dist"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
