--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@powerfulyang/components",
-  "version": "1.2.4",
+  "version": "0.9.0",
   "description": "react-components",
   "author": "powerfulyang",
   "license": "MIT",
-  "repository": "https://github.com/powerfulyang/tools.git",
+  "repository": "https://github.com/powerfulyang/components.git",
+  "homepage": "https://github.com/powerfulyang/components#readme",
+  "bugs": {
+    "url": "https://github.com/powerfulyang/components/issues"
+  },
   "files": [
     "dist",
     "src"
@@ -21,43 +25,50 @@
     },
     "./dist/es/index.css": {
       "style": "./dist/es/index.css"
+    },
+    "./dist/cjs/index.css": {
+      "style": "./dist/cjs/index.css"
     }
   },
   "sideEffects": false,
   "scripts": {
-    "patch-version": "npm version patch --no-git-tag-version",
     "prettier": "prettier --write \"src/**/*.{js,jsx,tsx,ts,json,md,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c && npm run tsc",
     "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
     "tsc": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
+    "ts-check": "tsc --noEmit",
     "prepare": "husky install",
     "test": "jest",
-    "precommit": "lint-staged && npm run test",
+    "precommit": "npm run ts-check && lint-staged && npm run test",
     "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "^0.4.0",
-    "@powerfulyang/utils": "^1.3.12",
-    "classnames": "^2.3.1",
-    "framer-motion": "^6.2.8",
-    "rxjs": "^7.5.5"
+    "@powerfulyang/hooks": "1.0.2",
+    "@powerfulyang/utils": "1.3.12",
+    "classnames": "2.3.1",
+    "framer-motion": "6.3.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "rxjs": "7.5.5"
   },
   "devDependencies": {
-    "@powerfulyang/lint": "0.7.14",
+    "@powerfulyang/lint": "1.0.2",
     "@rollup/plugin-commonjs": "21.1.0",
     "@rollup/plugin-node-resolve": "13.2.1",
     "@rollup/plugin-typescript": "8.3.2",
     "@rollup/plugin-url": "6.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.1.1",
+    "@types/react": "18.0.6",
+    "@types/react-dom": "18.0.2",
     "cross-env": "7.0.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
     "rollup": "2.70.2",
-    "rollup-plugin-postcss": "4.0.2"
+    "rollup-plugin-postcss": "4.0.2",
+    "tailwindcss": "3.0.24"
   }
 }
