fix(deps): update dependency @powerfulyang/hooks to v1.0.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,13 @@
     "module": "ESNext",
     "target": "ESNext",
     "sourceMap": true,
-    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
@@ -19,10 +18,10 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "declaration": false,
     "paths": {
-      "@": ["./src"],
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.spec.ts", "src/**/*.spec.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
