--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "dist",
     "src"
   ],
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "module": "dist/es/index.mjs",
   "style": "dist/es/index.css",
   "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/es/index.mjs",
-      "require": "./dist/cjs/index.js",
+      "require": "./dist/cjs/index.cjs",
       "types": "./dist/types/index.d.ts"
     },
     "./dist/es/index.css": {
@@ -35,9 +35,10 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,tsx,ts,json,md,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
-    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c && npm run tsc",
-    "watch:build": "rimraf dist && cross-env NODE_ENV=production rollup -c --watch",
-    "tsc": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
+    "prebuild": "rimraf dist",
+    "build": "run-p build:*",
+    "build:source": "rollup -c",
+    "build:types": "tsc -p tsconfig.types.json",
     "ts-check": "tsc --noEmit",
     "prepare": "husky install",
     "test": "jest",
@@ -48,7 +49,7 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "@powerfulyang/hooks": "1.0.2",
+    "@powerfulyang/hooks": "1.0.5",
     "@powerfulyang/utils": "1.3.12",
     "classnames": "2.3.1",
     "framer-motion": "6.3.1",
@@ -57,8 +58,8 @@
     "rxjs": "7.5.5"
   },
   "devDependencies": {
-    "@powerfulyang/lint": "1.0.2",
-    "@rollup/plugin-commonjs": "21.1.0",
+    "@powerfulyang/lint": "1.0.3",
+    "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-node-resolve": "13.2.1",
     "@rollup/plugin-typescript": "8.3.2",
     "@rollup/plugin-url": "6.1.0",
@@ -67,8 +68,10 @@
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
     "cross-env": "7.0.3",
+    "npm-run-all": "4.1.5",
     "rollup": "2.70.2",
     "rollup-plugin-postcss": "4.0.2",
-    "tailwindcss": "3.0.24"
+    "tailwindcss": "3.0.24",
+    "tsconfig-paths-jest": "0.0.1"
   }
 }
