--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "build:types": "tsc -p tsconfig.types.json && tsc-alias -p tsconfig.types.json",
     "ts-check": "tsc --noEmit",
     "postprepare": "husky install && install-peers",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "precommit": "npm run ts-check && lint-staged && npm run test",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "dev": "vite"
   },
   "browserslist": [
     "last 2 versions"
@@ -52,10 +53,10 @@
     "@powerfulyang/hooks": "^1.1.1",
     "@powerfulyang/utils": "^1.4.4",
     "classnames": "^2.3.1",
-    "framer-motion": "^6.3.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "rxjs": "^7.5.5"
+    "framer-motion": "^6.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.5.6"
   },
   "devDependencies": {
     "@powerfulyang/lint": "2.0.2",
@@ -63,6 +64,8 @@
     "@rollup/plugin-url": "7.0.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
-    "rollup-plugin-postcss": "4.0.2"
+    "@vitejs/plugin-react": "2.0.0",
+    "rollup-plugin-postcss": "4.0.2",
+    "vite": "3.0.4"
   }
 }
