--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@testing-library/react": "13.3.0",
     "@vitejs/plugin-react": "2.0.0",
     "rollup-plugin-postcss": "4.0.2",
-    "vite": "3.0.5"
+    "vite": "3.0.5",
+    "typescript": "latest",
+    "tailwindcss": "3.1.8"
   }
 }
