--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "sideEffects": false,
   "scripts": {
+    "bootstrap": "pnpm install --shamefully-hoist",
     "prettier": "prettier --write \"src/**/*.{tsx,ts,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .ts,.tsx ./src",
@@ -50,11 +51,11 @@
     "last 2 versions"
   ],
   "peerDependencies": {
-    "classnames": "^2.3.1",
-    "framer-motion": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rxjs": "^7.5.6",
+    "classnames": "*",
+    "framer-motion": "*",
+    "react": "*",
+    "react-dom": "*",
+    "rxjs": "*",
     "@powerfulyang/hooks": "*",
     "@powerfulyang/utils": "*"
   },
