--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "rootDir": "src",
     "outDir": "./dist/types",
     "emitDeclarationOnly": true,
     "declaration": true
   },
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
