--- a/package.json
+++ b/package.json
@@ -58,18 +58,17 @@
     "react": "*",
     "react-dom": "*",
     "reflect-metadata": "*",
-    "rxjs": "*"
+    "rxjs": "*",
+    "lodash-es": "*"
   },
   "devDependencies": {
     "@powerfulyang/lint": "3.1.0",
-    "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.5.0",
     "@rollup/plugin-url": "7.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/lodash-es": "*",
     "@vitejs/plugin-react": "2.1.0",
-    "lodash-es": "*",
     "react-router-dom": "6.3.0",
     "rollup-plugin-postcss": "4.0.2",
     "tailwindcss": "3.1.8",
