--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "rxjs": "*"
   },
   "devDependencies": {
-    "@powerfulyang/lint": "3.1.0",
+    "@powerfulyang/lint": "latest",
     "@rollup/plugin-typescript": "9.0.2",
     "@rollup/plugin-url": "8.0.1",
     "@testing-library/jest-dom": "5.16.5",
