--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,11 +1,9 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "./dist/types",
     "emitDeclarationOnly": true,
     "declaration": true
-  },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
+  }
 }
