--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "precommit": "npm run ts-check && lint-staged && npm run test",
     "prepublishOnly": "npm run build",
     "dev": "vite",
+    "build:site": "cross-env SITE=true vite build",
     "test:update:snapshot": "jest --updateSnapshot"
   },
   "browserslist": [
@@ -58,13 +59,15 @@
     "react": "*",
     "react-dom": "*",
     "reflect-metadata": "*",
-    "rxjs": "*"
+    "rxjs": "*",
+    "jotai": "*",
+    "jotai-immer": "*"
   },
   "optionalDependencies": {
     "d3": "*"
   },
   "devDependencies": {
-    "@powerfulyang/lint": "latest",
+    "@powerfulyang/lint": "3.1.3",
     "@rollup/plugin-typescript": "10.0.1",
     "@rollup/plugin-url": "8.0.1",
     "@testing-library/jest-dom": "5.16.5",
@@ -74,17 +77,7 @@
     "react-router-dom": "6.6.1",
     "rollup-plugin-postcss": "4.0.2",
     "tailwindcss": "3.2.4",
-    "typescript": "latest",
+    "typescript": "4.9.4",
     "vite": "4.0.4"
-  },
-  "dependencies": {
-    "@powerfulyang/hooks": "*",
-    "@powerfulyang/utils": "*",
-    "classnames": "*",
-    "framer-motion": "*",
-    "react": "*",
-    "react-dom": "*",
-    "reflect-metadata": "*",
-    "rxjs": "*"
   }
 }
