--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
       "style": "./dist/cjs/index.css"
     }
   },
-  "sideEffects": false,
   "scripts": {
     "prettier": "prettier --write \"src/**/*.{tsx,ts,scss}\"",
     "lint:style": "stylelint --fix \"src/**/*.scss\"",
@@ -45,6 +44,7 @@
     "precommit": "npm run ts-check && lint-staged && npm run test",
     "prepublishOnly": "npm run build",
     "dev": "vite",
+    "build:site": "cross-env SITE=true vite build",
     "test:update:snapshot": "jest --updateSnapshot"
   },
   "browserslist": [
@@ -58,14 +58,17 @@
     "react": "*",
     "react-dom": "*",
     "reflect-metadata": "*",
-    "rxjs": "*"
+    "rxjs": "*",
+    "jotai": "*",
+    "jotai-immer": "*",
+    "immer": "*"
   },
   "optionalDependencies": {
     "d3": "*"
   },
   "devDependencies": {
-    "@powerfulyang/lint": "latest",
-    "@rollup/plugin-typescript": "10.0.1",
+    "@powerfulyang/lint": "3.1.3",
+    "@rollup/plugin-typescript": "11.0.0",
     "@rollup/plugin-url": "8.0.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
@@ -74,17 +77,7 @@
     "react-router-dom": "6.6.1",
     "rollup-plugin-postcss": "4.0.2",
     "tailwindcss": "3.2.4",
-    "typescript": "latest",
+    "typescript": "4.9.4",
     "vite": "4.0.4"
-  },
-  "dependencies": {
-    "@powerfulyang/hooks": "*",
-    "@powerfulyang/utils": "*",
-    "classnames": "*",
-    "framer-motion": "*",
-    "react": "*",
-    "react-dom": "*",
-    "reflect-metadata": "*",
-    "rxjs": "*"
   }
 }
