--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.4",
-    "vite": "4.0.4"
+    "vite": "4.0.4",
+    "@tanstack/react-query": "4.22.0"
   }
 }
