--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "scripts": {
     "prettier": "prettier --write \"src/**/*.{tsx,ts,scss}\"",
-    "lint:style": "stylelint --fix \"src/**/*.scss\"",
     "lint:js": "eslint --fix --ext .ts,.tsx ./src",
     "prebuild": "rimraf dist",
     "build": "run-p build:*",
@@ -55,13 +54,15 @@
     "@powerfulyang/utils": "*",
     "classnames": "*",
     "framer-motion": "*",
+    "immer": "*",
+    "jotai": "*",
+    "jotai-immer": "*",
     "react": "*",
     "react-dom": "*",
     "reflect-metadata": "*",
     "rxjs": "*",
-    "jotai": "*",
-    "jotai-immer": "*",
-    "immer": "*"
+    "@emotion/react": "*",
+    "@emotion/styled": "*"
   },
   "optionalDependencies": {
     "d3": "*"
@@ -70,15 +71,13 @@
     "@powerfulyang/lint": "3.1.3",
     "@rollup/plugin-typescript": "11.0.0",
     "@rollup/plugin-url": "8.0.1",
+    "@tanstack/react-query": "4.22.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/d3": "7.4.0",
     "@vitejs/plugin-react": "3.0.1",
     "react-router-dom": "6.6.2",
-    "rollup-plugin-postcss": "4.0.2",
-    "tailwindcss": "3.2.4",
     "typescript": "4.9.4",
-    "vite": "4.0.4",
-    "@tanstack/react-query": "4.22.0"
+    "vite": "4.0.4"
   }
 }
