--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "module": "dist/es/index.mjs",
   "style": "dist/es/index.css",
   "types": "dist/types/index.d.ts",
+  "sideEffects": false,
   "exports": {
     ".": {
       "import": "./dist/es/index.mjs",
@@ -69,15 +70,15 @@
   },
   "devDependencies": {
     "@powerfulyang/lint": "3.1.3",
-    "@rollup/plugin-typescript": "11.0.0",
+    "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
-    "@tanstack/react-query": "4.22.0",
+    "@tanstack/react-query": "4.28.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "14.0.0",
     "@types/d3": "7.4.0",
-    "@vitejs/plugin-react": "3.0.1",
-    "react-router-dom": "6.6.2",
-    "typescript": "4.9.4",
-    "vite": "4.0.4"
+    "@vitejs/plugin-react": "3.1.0",
+    "react-router-dom": "6.10.0",
+    "typescript": "5.0.4",
+    "vite": "4.2.1"
   }
 }
