--- a/package.json
+++ b/package.json
@@ -51,28 +51,28 @@
     "last 2 versions"
   ],
   "peerDependencies": {
-    "@powerfulyang/hooks": "*",
-    "@powerfulyang/utils": "*",
-    "classnames": "*",
-    "framer-motion": "*",
-    "immer": "*",
-    "jotai": "*",
-    "jotai-immer": "*",
-    "react": "*",
-    "react-dom": "*",
-    "reflect-metadata": "*",
-    "rxjs": "*",
-    "@emotion/react": "*",
-    "@emotion/styled": "*"
+    "@powerfulyang/hooks": "^1.4.0",
+    "@powerfulyang/utils": "^1.9.2",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.11.2",
+    "immer": "^9.0.21",
+    "jotai": "^2.0.4",
+    "jotai-immer": "^0.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6"
   },
   "optionalDependencies": {
-    "d3": "*"
+    "d3": "^7.8.4"
   },
   "devDependencies": {
     "@powerfulyang/lint": "3.1.3",
     "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
-    "@tanstack/react-query": "4.28.0",
+    "@tanstack/react-query": "4.29.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/d3": "7.4.0",
