--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "last 2 versions"
   ],
   "peerDependencies": {
-    "@powerfulyang/hooks": "^1.4.0",
-    "@powerfulyang/utils": "^1.9.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@powerfulyang/hooks": "workspace:*",
+    "@powerfulyang/utils": "workspace:*",
     "classnames": "^2.3.2",
     "framer-motion": "^10.11.2",
     "immer": "^9.0.21",
@@ -61,15 +63,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6"
+    "rxjs": "^7.8.0"
   },
   "optionalDependencies": {
     "d3": "^7.8.4"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@powerfulyang/hooks": "1.4.0",
     "@powerfulyang/lint": "3.1.3",
+    "@powerfulyang/utils": "1.9.2",
     "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
     "@tanstack/react-query": "4.29.1",
@@ -77,7 +81,16 @@
     "@testing-library/react": "14.0.0",
     "@types/d3": "7.4.0",
     "@vitejs/plugin-react": "3.1.0",
+    "classnames": "2.3.2",
+    "framer-motion": "10.11.6",
+    "immer": "9.0.21",
+    "jotai": "2.0.4",
+    "jotai-immer": "^0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.0",
     "typescript": "5.0.4",
     "vite": "4.2.1"
   }
