fix: pnpm .npmrc expose dependency

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "build:types": "tsc -p tsconfig.types.json && tsc-alias -p tsconfig.types.json",
     "ts-check": "tsc --noEmit",
     "postprepare": "husky install",
-    "test": "jest --passWithNoTests",
-    "precommit": "npm run ts-check && lint-staged && npm run test",
+    "test": "jest",
+    "precommit": "lint-staged",
     "prepublishOnly": "npm run build",
     "dev": "vite",
     "build:site": "cross-env SITE=true vite build",
@@ -76,13 +76,13 @@
     "@powerfulyang/utils": "1.9.2",
     "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
-    "@tanstack/react-query": "4.29.1",
+    "@tanstack/react-query": "4.29.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/d3": "7.4.0",
     "@vitejs/plugin-react": "3.1.0",
     "classnames": "2.3.2",
-    "framer-motion": "10.11.6",
+    "framer-motion": "10.12.2",
     "immer": "9.0.21",
     "jotai": "2.0.4",
     "jotai-immer": "^0.2.0",
