--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "target": "ES2018"
+    "rootDir": "src"
   },
   "exclude": ["node_modules", "./src/**/*.spec.ts", "./src/**/*.spec.tsx"],
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
