chore(pnpm): update .npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
 enable-pre-post-scripts=true
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=*stylelint*
 public-hoist-pattern[]=rimraf
 public-hoist-pattern[]=*rollup*
 public-hoist-pattern[]=npm-run-all
@@ -9,5 +10,5 @@ public-hoist-pattern[]=tsc-alias
 public-hoist-pattern[]=jest
 public-hoist-pattern[]=lint-staged
 public-hoist-pattern[]=husky
-public-hoist-pattern[]=@swc*
-public-hoist-pattern[]=@commitlint*
+public-hoist-pattern[]=@swc/*
+public-hoist-pattern[]=@commitlint/*
