--- a/package.json
+++ b/package.json
@@ -48,18 +48,18 @@
     "react-dom": "^18.2.0"
   },
   "optionalDependencies": {
-    "d3": "^7.8.4"
+    "d3": "7.8.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@powerfulyang/hooks": "^1.5.0",
-    "@powerfulyang/utils": "^1.10.0",
-    "classnames": "^2.3.2",
-    "framer-motion": "^10.12.4",
-    "jotai": "^2.0.4",
-    "jotai-immer": "^0.2.0",
-    "rxjs": "^7.8.0"
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@powerfulyang/hooks": "1.5.1",
+    "@powerfulyang/utils": "1.10.0",
+    "classnames": "2.3.2",
+    "framer-motion": "10.12.4",
+    "jotai": "2.0.4",
+    "jotai-immer": "0.2.0",
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
     "@emotion/jest": "11.10.5",
@@ -71,14 +71,16 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/d3": "7.4.0",
-    "@types/node": "18.15.12",
+    "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "@types/testing-library__jest-dom": "5.14.5",
-    "@vitejs/plugin-react": "3.1.0",
+    "@vitejs/plugin-react": "4.0.0",
     "expect": "29.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "typescript": "5.0.4",
-    "vite": "4.3.0"
+    "vite": "4.3.1"
   }
 }
