--- a/package.json
+++ b/package.json
@@ -45,26 +45,28 @@
   ],
   "dependencies": {
     "@powerfulyang/hooks": "1.5.2",
-    "@powerfulyang/utils": "1.10.0",
+    "@powerfulyang/utils": "1.10.2",
     "classnames": "2.3.2",
     "framer-motion": "10.12.4",
     "jotai": "2.0.4",
     "jotai-immer": "0.2.0",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@emotion/jest": "11.10.5",
     "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
     "@jest/globals": "29.5.0",
+    "@mui/material": "5.12.2",
     "@powerfulyang/lint": "3.2.1",
     "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
-    "@tanstack/react-query": "4.29.3",
+    "@tanstack/react-query": "4.29.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "18.16.2",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
     "@types/testing-library__jest-dom": "5.14.5",
     "@vitejs/plugin-react": "4.0.0",
     "expect": "29.5.0",
@@ -72,10 +74,12 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "typescript": "5.0.4",
-    "vite": "4.3.1"
+    "vite": "4.3.3"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
