--- a/package.json
+++ b/package.json
@@ -47,34 +47,35 @@
     "@powerfulyang/hooks": "1.5.2",
     "@powerfulyang/utils": "1.10.2",
     "classnames": "2.3.2",
-    "framer-motion": "10.12.4",
-    "jotai": "2.0.4",
+    "framer-motion": "10.12.9",
+    "jotai": "2.1.0",
     "jotai-immer": "0.2.0",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@emotion/jest": "11.10.5",
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
+    "@emotion/jest": "11.11.0",
+    "@emotion/react": "11.11.0",
+    "@emotion/styled": "11.11.0",
     "@jest/globals": "29.5.0",
-    "@mui/material": "5.12.2",
+    "@mui/material": "5.12.3",
     "@powerfulyang/lint": "3.2.1",
     "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-url": "8.0.1",
     "@tanstack/react-query": "4.29.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
-    "@types/node": "18.16.2",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/node": "20.1.1",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "@types/testing-library__jest-dom": "5.14.5",
     "@vitejs/plugin-react": "4.0.0",
     "expect": "29.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.10.0",
+    "react-hot-toast": "2.4.1",
+    "react-router-dom": "6.11.1",
     "typescript": "5.0.4",
-    "vite": "4.3.3"
+    "vite": "4.3.5"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.6",
